fixed errors, added getting last prayer
