# src/main/java/ru/ifmo/mpi/magichospital/god/domain/dto/PatientDTO.java
@@ -8,6 +8,7 @@ public class PatientDTO {
 
     private String name;    
     private String surname;
+    private String patronymic;
     private boolean isMale;    
     private boolean isMage;
     private String socialStatus;
@@ -15,6 +16,7 @@ public class PatientDTO {
     public PatientDTO(Patient patient) {
     	this.name = patient.getName();
     	this.surname = patient.getSurname();
+    	this.patronymic = patient.getPatronymic();
     	this.socialStatus = patient.getSocialStatus().getName();
     	this.isMale = patient.isMale();
     	this.isMage = patient.isMage();
